Some errors + linter
